--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,49 @@
-fastapi
-uvicorn
+anyio==3.7.0
+asgiref==3.7.2
+bcbio-gff==0.7.0
+bcrypt==4.0.1
+biopython==1.81
+cachetools==3.1.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.6
+commonmark==0.9.1
+cryptography==41.0.3
+decorator==5.1.1
+Django==4.2.1
+djangorestframework==3.14.0
+dnspython==2.4.1
+fastapi==0.95.2
+h11==0.14.0
+idna==3.4
+mysql-connector-python==8.0.33
+numpy==1.25.2
+paramiko==3.0.0
+prompt-toolkit==3.0.39
+protobuf==3.20.3
+pycparser==2.21
+pydantic==1.10.8
+Pygments==2.16.1
+PyJWT==2.4.0
+pymongo==4.4.1
+PyNaCl==1.5.0
+pypng==0.20220715.0
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3
+PyYAML==6.0.1
+qrcode==7.4.2
+questionary==1.10.0
+requests==2.27.1
+rich==11.2.0
+six==1.16.0
+sniffio==1.3.0
+sqlparse==0.4.4
+starlette==0.27.0
+typing_extensions==4.6.2
+urllib3==1.26.16
+uvicorn==0.22.0
+wcwidth==0.2.6
+wrapt==1.15.0
